# app/Http/Controllers/BoardController.php
@@ -7,10 +7,72 @@ use Illuminate\Support\Facades\DB;
 
 use App\Http\Controllers\Controller;
 use App\Models\Board;
+
 use Exception;
+use Illuminate\Http\JsonResponse;
+use OpenApi\Attributes\MediaType;
+use OpenApi\Attributes\Get;
+use OpenApi\Attributes\Post;
+use OpenApi\Attributes\Put;
+use OpenApi\Attributes\Property;
+use OpenApi\Attributes\RequestBody;
+use OpenApi\Attributes\Response;
+use OpenApi\Attributes\Schema;
+use OpenApi\Attributes\JsonContent;
+use OpenApi\Attributes as OA;
+
+
 
 class BoardController extends Controller
 {
+
+    #[get(
+        path: "/board",
+        operationId: "board_index",
+        summary: "Get data boards",
+        requestBody: new RequestBody(
+            content: [
+                new MediaType(
+                    mediaType: "application/json",
+                    schema: new Schema(
+                        properties: [],
+                        example: []
+                    ),
+                )
+            ]
+        ),
+        tags: ["Board"],
+        responses: [
+            new Response(
+                response: 200,
+                description: "Get data board succesfully!!",
+                content: new JsonContent(
+                    properties: [
+                        new Property(property: "board", properties: [
+                            new Property(property: "id", type: "int"),
+                            new Property(property: "title", type: "string"),
+                            new Property(property: "workspace_id", type: "int"),
+                            new Property(property: "closed", type: "int"),
+                            new Property(property: "updated_at", type: "string"),
+                            new Property(property: "created_at", type: "string"),
+                        ], type: "object"),
+                    ],
+                    example: [
+                        "user" => [
+                            "id" => 1,
+                            "title" => "iure",
+                            "workspace_id" => 1,
+                            "closed" => 1,
+                            "updated_at" => "2023-01-08 01:04:24",
+                            "created_at" => "2023-01-08 01:04:24"
+                        ]
+                    ]
+                ),
+            ),
+            new Response(response: 500, description: "Failed to get data board!!!"),
+        ],
+    )]
+
     /**
      * Display a listing of the resource.
      *
@@ -37,6 +99,58 @@ class BoardController extends Controller
             );
         }
     }
+
+
+    #[post(
+        path: "/board",
+        operationId: "board_create",
+        summary: "Create a new board",
+        requestBody: new RequestBody(
+            content: [
+                new MediaType(
+                    mediaType: "application/json",
+                    schema: new Schema(
+                        properties: [
+                            new Property(property: "title", type: "string"),
+                            new Property(property: "workspace_id", type: "int"),
+                            new Property(property: "closed", type: "int"),
+                        ],
+                        example: ["title" => "iure", "workspace_id" => 1, "closed" => 0]
+                    ),
+                )
+            ]
+        ),
+        tags: ["Board"],
+        responses: [
+            new Response(
+                response: 200,
+                description: "Create board succesfully!!",
+                content: new JsonContent(
+                    properties: [
+                        new Property(property: "board", properties: [
+                            new Property(property: "id", type: "int"),
+                            new Property(property: "title", type: "string"),
+                            new Property(property: "workspace_id", type: "int"),
+                            new Property(property: "closed", type: "int"),
+                            new Property(property: "updated_at", type: "string"),
+                            new Property(property: "created_at", type: "string"),
+                        ], type: "object"),
+                    ],
+                    example: [
+                        "user" => [
+                            "id" => 1,
+                            "title" => "iure",
+                            "workspace_id" => 1,
+                            "closed" => 1,
+                            "updated_at" => "2023-01-08 01:04:24",
+                            "created_at" => "2023-01-08 01:04:24"
+                        ]
+                    ]
+                ),
+            ),
+            new Response(response: 500, description: "Failed to create board!!!"),
+        ],
+    )]
 
     /**
      * Show the form for creating a new resource.
@@ -81,6 +195,59 @@ class BoardController extends Controller
         //
     }
 
+
+
+    #[get(
+        path: "/board/{id}",
+        operationId: "board_show_by_ID",
+        summary: "Get data a board by ID",
+        requestBody: new RequestBody(
+            content: [
+                new MediaType(
+                    mediaType: "application/json",
+                    schema: new Schema(
+                        properties: [
+                            new Property(property: "id", type: "int"),
+                        ],
+                        example: ["id" => 1]
+                    ),
+                )
+            ]
+        ),
+        tags: ["Board"],
+        responses: [
+            new Response(
+                response: 200,
+                description: "Found board succesfully!!",
+                content: new JsonContent(
+                    properties: [
+                        new Property(property: "board", properties: [
+                            new Property(property: "id", type: "int"),
+                            new Property(property: "title", type: "string"),
+                            new Property(property: "workspace_id", type: "int"),
+                            new Property(property: "closed", type: "int"),
+                            new Property(property: "updated_at", type: "string"),
+                            new Property(property: "created_at", type: "string"),
+                        ], type: "object"),
+                    ],
+                    example: [
+                        "user" => [
+                            "id" => 1,
+                            "title" => "iure",
+                            "workspace_id" => 1,
+                            "closed" => 1,
+                            "updated_at" => "2023-01-08 01:04:24",
+                            "created_at" => "2023-01-08 01:04:24"
+                        ]
+                    ]
+                ),
+            ),
+            new Response(response: 404, description: "Not found board!!!"),
+            new Response(response: 500, description: "Failed to found board!!!"),
+        ],
+    )]
+
+
     /**
      * Display the specified resource.
      *
@@ -111,6 +278,62 @@ class BoardController extends Controller
             ]);
         }
     }
+
+
+    #[put(
+        path: "/board/{id}",
+        operationId: "board_edit_by_ID",
+        summary: "Update board by ID",
+        requestBody: new RequestBody(
+            content: [
+                new MediaType(
+                    mediaType: "application/json",
+                    schema: new Schema(
+                        properties: [
+                            new Property(property: "id", type: "int"),
+                            new Property(property: "title", type: "string"),
+                            new Property(property: "workspace_id", type: "int"),
+                            new Property(property: "closed", type: "int"),
+                        ],
+                        example: ["id" => 1, "title" => "iure", "workspace_id" => 1, "closed" => 0]
+                    ),
+                )
+            ]
+        ),
+        tags: ["Board"],
+        responses: [
+            new Response(
+                response: 200,
+                description: "Found board succesfully!!",
+                content: new JsonContent(
+                    properties: [
+                        new Property(property: "board", properties: [
+                            new Property(property: "id", type: "int"),
+                            new Property(property: "title", type: "string"),
+                            new Property(property: "workspace_id", type: "int"),
+                            new Property(property: "closed", type: "int"),
+                            new Property(property: "updated_at", type: "string"),
+                            new Property(property: "created_at", type: "string"),
+                        ], type: "object"),
+                    ],
+                    example: [
+                        "user" => [
+                            "id" => 1,
+                            "title" => "iure",
+                            "workspace_id" => 1,
+                            "closed" => 1,
+                            "updated_at" => "2023-01-08 01:04:24",
+                            "created_at" => "2023-01-08 01:04:24"
+                        ]
+                    ]
+                ),
+            ),
+            new Response(response: 404, description: "Not found board!!!"),
+            new Response(response: 500, description: "Failed to update board!!!"),
+        ],
+    )]
+
+
 
     /**
      * Show the form for editing the specified resource.
@@ -171,7 +394,39 @@ class BoardController extends Controller
             );
         }
     }
-
+    #[delete(
+        path: "/board/{id}",
+        operationId: "board_delete_by_ID",
+        summary: "Delete data a board by ID",
+        requestBody: new RequestBody(
+            content: [
+                new MediaType(
+                    mediaType: "application/json",
+                    schema: new Schema(
+                        properties: [
+                            new Property(property: "id", type: "int"),
+                        ],
+                        example: ["id" => 1]
+                    ),
+                )
+            ]
+        ),
+        tags: ["Board"],
+        responses: [
+            new Response(
+                response: 200,
+                description: "Found board succesfully!!",
+                content: new JsonContent(
+                    properties: [
+                        new Property(property: "board", properties: [], type: "object"),
+                    ],
+                    example: []
+                ),
+            ),
+            new Response(response: 404, description: "Not found board!!!"),
+            new Response(response: 500, description: "Failed to delete board!!!"),
+        ],
+    )]
     /**
      * Remove the specified resource from storage.
      *
@@ -189,7 +444,7 @@ class BoardController extends Controller
                     'message' => 'Not found board!!!'
                 ]);
             } else {
-                
+
                 Board::where('id', $id)->delete();
 
                 return response()->json(
