# storage/api-docs/api-docs.json
@@ -157,8 +157,8 @@
                     "Board"
                 ],
                 "summary": "Get data boards",
-                "description": "Display list of joined user boards",
-                "operationId": "board",
+                "description": "Display a listing of the resource.",
+                "operationId": "board_index",
                 "requestBody": {
                     "content": {
                         "application/json": {
@@ -175,7 +175,6 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "type": "object",
                                     "properties": {
                                         "board": {
                                             "properties": {
@@ -197,16 +196,18 @@
                                                 "created_at": {
                                                     "type": "string"
                                                 }
-                                            }
+                                            },
+                                            "type": "object"
                                         }
-                                    }
+                                    },
+                                    "type": "object"
                                 },
                                 "example": {
-                                    "workspace": {
+                                    "user": {
                                         "id": 1,
                                         "title": "iure",
                                         "workspace_id": 1,
-                                        "closed": 0,
+                                        "closed": 1,
                                         "updated_at": "2023-01-08 01:04:24",
                                         "created_at": "2023-01-08 01:04:24"
                                     }
@@ -224,13 +225,12 @@
                     "Board"
                 ],
                 "summary": "Create a new board",
-                "description": "Store a new created resource in storagex`",
-                "operationId": "",
+                "description": "Show the form for creating a new resource.",
+                "operationId": "board_create",
                 "requestBody": {
                     "content": {
                         "application/json": {
                             "schema": {
-                                "type": "object",
                                 "properties": {
                                     "title": {
                                         "type": "string"
@@ -242,6 +242,7 @@
                                         "type": "integer"
                                     }
                                 },
+                                "type": "object",
                                 "example": {
                                     "title": "iure",
                                     "workspace_id": 1,
@@ -257,10 +258,12 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "type": "object",
                                     "properties": {
                                         "board": {
                                             "properties": {
+                                                "id": {
+                                                    "type": "integer"
+                                                },
                                                 "title": {
                                                     "type": "string"
                                                 },
@@ -275,20 +278,21 @@
                                                 },
                                                 "created_at": {
                                                     "type": "string"
-                                                },
-                                                "id": {
-                                                    "type": "integer"
                                                 }
-                                            }
+                                            },
+                                            "type": "object"
                                         }
                                     },
-                                    "example": {
-                                        "title": "New title",
-                                        "workspace_id": "1",
+                                    "type": "object"
+                                },
+                                "example": {
+                                    "user": {
+                                        "id": 1,
+                                        "title": "iure",
+                                        "workspace_id": 1,
                                         "closed": 1,
-                                        "updated_at": "2023-01-08T11:13:28.000000Z",
-                                        "created_at": "2023-01-08T11:13:28.000000Z",
-                                        "id": 9
+                                        "updated_at": "2023-01-08 01:04:24",
+                                        "created_at": "2023-01-08 01:04:24"
                                     }
                                 }
                             }
@@ -306,18 +310,18 @@
                     "Board"
                 ],
                 "summary": "Get data a board by ID",
-                "description": "Display the designation board",
-                "operationId": "",
+                "description": "Display the specified resource.",
+                "operationId": "board_show_by_ID",
                 "requestBody": {
                     "content": {
                         "application/json": {
                             "schema": {
-                                "type": "object",
                                 "properties": {
                                     "id": {
                                         "type": "integer"
                                     }
                                 },
+                                "type": "object",
                                 "example": {
                                     "id": 1
                                 }
@@ -331,7 +335,6 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "type": "object",
                                     "properties": {
                                         "board": {
                                             "properties": {
@@ -353,16 +356,18 @@
                                                 "created_at": {
                                                     "type": "string"
                                                 }
-                                            }
+                                            },
+                                            "type": "object"
                                         }
-                                    }
+                                    },
+                                    "type": "object"
                                 },
                                 "example": {
-                                    "workspace": {
+                                    "user": {
                                         "id": 1,
                                         "title": "iure",
                                         "workspace_id": 1,
-                                        "closed": 0,
+                                        "closed": 1,
                                         "updated_at": "2023-01-08 01:04:24",
                                         "created_at": "2023-01-08 01:04:24"
                                     }
@@ -382,14 +387,13 @@
                 "tags": [
                     "Board"
                 ],
-                "summary": "Update board",
-                "description": "Update the designation table",
-                "operationId": "",
+                "summary": "Update board by ID",
+                "description": "Show the form for editing the specified resource.",
+                "operationId": "board_edit_by_ID",
                 "requestBody": {
                     "content": {
                         "application/json": {
                             "schema": {
-                                "type": "object",
                                 "properties": {
                                     "id": {
                                         "type": "integer"
@@ -404,6 +408,7 @@
                                         "type": "integer"
                                     }
                                 },
+                                "type": "object",
                                 "example": {
                                     "id": 1,
                                     "title": "iure",
@@ -416,11 +421,10 @@
                 },
                 "responses": {
                     "200": {
-                        "description": "Update board succesfully!!",
+                        "description": "Found board succesfully!!",
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "type": "object",
                                     "properties": {
                                         "board": {
                                             "properties": {
@@ -442,16 +446,18 @@
                                                 "created_at": {
                                                     "type": "string"
                                                 }
-                                            }
+                                            },
+                                            "type": "object"
                                         }
-                                    }
+                                    },
+                                    "type": "object"
                                 },
                                 "example": {
-                                    "workspace": {
+                                    "user": {
                                         "id": 1,
                                         "title": "iure",
                                         "workspace_id": 1,
-                                        "closed": 0,
+                                        "closed": 1,
                                         "updated_at": "2023-01-08 01:04:24",
                                         "created_at": "2023-01-08 01:04:24"
                                     }
@@ -464,51 +470,6 @@
                     },
                     "500": {
                         "description": "Failed to update board!!!"
-                    }
-                }
-            },
-            "delete": {
-                "tags": [
-                    "Board"
-                ],
-                "summary": "Delete data a board by ID",
-                "description": "Delete the designation board",
-                "operationId": "",
-                "requestBody": {
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "type": "object",
-                                "properties": {
-                                    "id": {
-                                        "type": "integer"
-                                    }
-                                },
-                                "example": {
-                                    "id": 1
-                                }
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "200": {
-                        "description": "Found board succesfully!!",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "type": "object",
-                                    "properties": {}
-                                },
-                                "example": []
-                            }
-                        }
-                    },
-                    "404": {
-                        "description": "Not found board!!!"
-                    },
-                    "500": {
-                        "description": "Failed to found board!!!"
                     }
                 }
             }
